[package]
name = "p64-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "p64_core"
path = "src/n64.rs"
crate-type = ["lib"]

[dependencies]
p64-proc-macros = { path = "../p64-proc-macros" }
p64-gui = { path = "../p64-gui" }

bitflags = "2.6.0"
sha2 = "0.10"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
dirs = "5.0.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zip = "2.1"
governor = "0.7"
chrono = { version = "0.4", features = ["clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
zip = { version = "2.1", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", default-features = false }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
