[package]
name = "p64-gui"
version = "0.1.0"
edition = "2021"

[package.metadata.winres]
OriginalFilename = "p64.exe"
FileDescription = "P64"

[lib]
name = "p64_gui"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
dirs = "5.0"
serde_json = "1.0"
rusttype = "0.9"
serde = { version = "1.0.215", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl2 = { version = "0.37", default-features = false, features = ["static-link", "bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.74", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]}
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
winres = "0.1.12"


